# kyros-vital

./: BUILD-SPEC.md
kyros-backend/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
kyros-backend/.github/workflows/: deploy.yml  test.yml
kyros-backend/alembic/: env.py
kyros-backend/alembic/versions/: 4183f546841c_initial_wellness_schema.py  b5c9a72f3d1e_add_consultations_and_user_role.py  c3d8e1f4a9b2_add_users_is_active.py  c8b6af006567_reminder_snooze_window_fields.py  d4e9f2a5b8c1_add_users_name.py  e5f0a3b6c9d2_add_users_age_gender.py  f6a1b2c3d4e5_add_error_log_table.py  g7b2c3d4e5f6_error_log_add_context.py
kyros-backend/app/: cli.py  config.py  database.py  main.py
kyros-backend/app/admin/: __init__.py  auth.py  cli.py  deps.py
kyros-backend/app/admin/routes/: __init__.py  audit.py  consultations.py  dashboard.py  errors.py  health.py  items.py  reminders.py  users.py
kyros-backend/app/admin/services/: audit.py  error_log.py  metrics.py
kyros-backend/app/admin/static/: admin.css
kyros-backend/app/admin/templates/: 404.html  audit_log.html  base.html  confirm_action.html  consultation_detail.html  (+9 more)
kyros-backend/app/core/: audit.py  auth.py  error_capture.py  exceptions.py  logging.py  rate_limit.py  storage.py
kyros-backend/docs/: ADMIN.md
kyros-backend/scripts/: seed.py  seed_demo.py  setup_db.sql
kyros-backend/scripts/seed/: common.py  user_anjali.py  user_priya.py  user_rajesh.py
kyros-backend/tests/: conftest.py
kyros-backend/tests/admin/: test_audit_redaction.py  test_auth.py  test_confirmation.py  test_dashboard.py
kyros-backend/tests/core/: test_audit.py  test_auth.py  test_storage.py
kyros-backend/tests/scripts/: test_seed_demo.py
kyros-backend/tests/shared/: test_health.py  test_users.py
kyros-backend/tests/wellness/: test_models.py
(+118 files in other folders)
